# axiom-backtest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CASE_STUDY.md
examples/: etf_case_study.py  fetch_data.py  moving_average_crossover.py
src/axiom/: __init__.py  data.py  engine.py  event.py  execution.py  metrics.py  portfolio.py  sizing.py  strategy.py  validation.py
tests/: test_engine.py  test_execution.py  test_metrics.py  test_sizing.py  test_validation.py
