[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom-backtest"
version = "0.1.0"
description = "Event-driven quant backtesting framework with realistic costs, slippage, and walk-forward out-of-sample validation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "a0merr" }]
keywords = ["backtesting", "quant", "trading", "event-driven", "walk-forward"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Financial and Insurance Industry",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/a0merr/axiom-backtest"
Repository = "https://github.com/a0merr/axiom-backtest"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["src/axiom"]

# numpy/pandas ship PEP 695 `type` statements in their stubs that don't parse
# under an older target; we don't type-check third-party internals anyway.
[[tool.mypy.overrides]]
module = ["numpy.*", "pandas.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
